fixed link to resume

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ urls:
 
 author_logo: authors/heidisaleh.jpg
 author: Heidi Saleh
-author_bio: Hi, my name is Heidi Saleh. I built this site using devlopr-jekyll. Some fun facts about me is that I lived in three different countries, I love sharks. I also love adventure! (skydiving, parasailing, rock climbing etc). I hope to go shark diving and bungee jumping at some point :) Here is the path to my resume /Users/heidisaleh/Documents/GitHub/resume/_config.yml 
+author_bio: Hi, my name is Heidi Saleh. I built this site using devlopr-jekyll. Some fun facts about me is that I lived in three different countries, I love sharks. I also love adventure! (skydiving, parasailing, rock climbing etc). I hope to go shark diving and bungee jumping at some point :) Here is the path to my resume https://hsaleh13.github.io/resume/
 author_email: "Heidi.saleh1@marist.edu"
 author_location: New York
 author_website_url: "https://github.com/Hsaleh13"
