setup profile card

--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,9 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
+author: Sujay Kundu
+author_role: Full Stack Web Developer
+author_bio: Hi, I built this site using devlopr-jekyll :D
 author_email: "mail@sujaykundu.com"
 author_location: India
 author_website_url: "https://sujaykundu.com"
