--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: devlopr
-subtitle: A Portfolio Jekyll Theme Built for Developers
+title: heo ye eun
+subtitle: ... # TODO 수정중
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
@@ -8,54 +8,48 @@ baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
 urls:
-    - text: Home
-      url: /
     - text: About
       url: /about
     - text: Blog
       url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
     - text: Contact
       url : /contact
 
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+author_logo: profile.png # TODO 사진 바꾸기
+author: Ye Eun
+author_bio: Hi, my name is Ye Eun.
+author_email: "yestar28@gmail.com"
+author_location: Korea
+author_website_url: "https://yeen28.github.io"
+typewrite-text: 개발자 허예은 입니다. # TODO 자기소개 작성하기
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
-# Experiences
+# Experiences 경력
 author_work_experiences:
-            - company_name: Google
+            - company_name: 수정중
               company_logo: google.png
-              company_url: https://google.com
+              company_url: https://yeen28.github.io
               designation: Software Engineer
-              description: Worked on various Google Products
+              description: Worked on ...
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
-              visibility: true
+#            - company_name: Microsoft
+#              company_logo: microsoft.png
+#              company_url: https://microsoft.com
+#              designation: Azure Developer
+#              description: Worked on various Azure Cloud Products
+#              visibility: false
 
 # Education
-author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
-                visibility: true
+#author_education_details:
+#              - college_logo: mit.png
+#                college_name: MIT
+#                college_url: https://mit.org
+#                college_degree: CS Engineer
+#                description: Bachelor of Technology
+#                visibility: true
 
 # Projects
 author_project_details:
@@ -64,23 +58,14 @@ author_project_details:
                 project_description: A Platform built for Gamers and Game Devs
                 project_url: https://gamershub.in
                 visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
+#              - project_thumbnail: hack4r.PNG
+#                project_title: Hack4r
+#                project_description: A Platform built for Hackers and Penetration Testers
+#                project_url: https://hack4r.com
+#                visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+github_username:  yeen28
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
@@ -90,12 +75,9 @@ hyvor_talk_website_id: 476
 # wakatime username (coding activity)
 wakatime_username: sujaykundu777
 
-# mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
-
 # contact form - (choose formspress or getform)
 # getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
-formspree_email: johndoe@gmail.com
+formspree_email: yestar28@gmail.com
 
 # releases - widget can be (sidebar, modal or embed)
 olvy_organization: devlopr
