--- a/_config.yml
+++ b/_config.yml
@@ -59,22 +59,22 @@ author_education_details:
 
 # Projects
 author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
+              - project_thumbnail: snake.png
+                project_title: Snake + SFML
+                project_description: Snake Clone built in C++ using SFML.
+                project_url: https://github.com/TelloViz/Snake-SFML
                 visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
+              - project_thumbnail: gyofish.PNG
+                project_title: ChompChomp (Gyo Fish!)
+                project_description: Summer Jam project with my brother. The goal was to implement the fishing mechanic from Stardew Valley.
+                project_url: https://github.com/TelloViz/ChompChomp
                 visibility: true
 
 # social links
 twitter_username: johndoe
 github_username:  sujaykundu777
 facebook_username: johndoe
-linkedin_username: johndoe
+linkedin_username: lollisjosh
 behance_username: johndoe
 instagram_username: johndoe
 medium_username: johndoe
@@ -88,10 +88,10 @@ flickr_username: johndoe
 hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+wakatime_username: " " #sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+mailchimp_form_url: " " #https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # contact form - (choose formspress or getform)
 # getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
