--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ subtitle: The Portfolio of Joshua "Tello-" Lollis.
 description: >- # this means to ignore newlines until "baseurl:"
   
 
-url: "https://tello-vision.netlify.app" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://telloviz.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
@@ -29,7 +29,7 @@ author: Josh Lollis
 author_bio: Hi, my name is Josh Lollis!
 author_email: "tellovisionstudio@gmail.com"
 author_location: Fullerton CA, USA
-author_website_url: "https://tello-vision.netlify.app"
+author_website_url: "https://telloviz.netlify.app"
 typewrite-text: Game Developer | Programmer | Visual Artist | Musician
 hero_cover_img: office.png # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
@@ -192,7 +192,7 @@ jekyll_admin:
   #   - staticfiles
   #   - datafiles
   #   - configuration
-  homepage: "posts"
+  homepage: "about"
 
 
 # Exclude from processing.
