trying to fix still

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author: Josh Lollis
 author_bio: Hi, my name is Josh Lollis!
 author_email: "tellovisionstudio@gmail.com"
 author_location: Fullerton CA, USA
-author_website_url: "https://telloviz.netlify.app/"
+author_website_url: "https://telloviz.netlify.app"
 typewrite-text: Game Developer | Programmer | Visual Artist | Musician
 hero_cover_img: office.png # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
@@ -37,25 +37,25 @@ hero_cover_img: office.png # replace this for changing homepage cover (eg. try c
 author_work_experiences:
             - company_name: Brain Builders Stem Education
               company_logo: brain.png
-              company_url: https://www.brainbuildersed.org/
+              company_url: https://www.brainbuildersed.org
               designation: Educator
               description: Engineering Educator for 3rd-6th grade students in after school programs around the Santa Ana CA area.
               visibility: true
             - company_name: Thales
               company_logo: thales.png
-              company_url: https://www.thalesgroup.com/en/
+              company_url: https://www.thalesgroup.com/en
               designation: Production Team Assistant
               description: Quality Assurance on Digital Video/Audio assets per spec to client contract.
               visibility: true
             - company_name: ADI / Honeywell / Resideo
               company_logo: adi.png
-              company_url: https://www.adiglobaldistribution.us/
+              company_url: https://www.adiglobaldistribution.us
               designation: Sales Asistant / Will-Call Lead
               description: Order Pulling, Warehouse Logistics, Will-Call Window Lead
               visibility: true
             - company_name: Wal*Mart
               company_logo: wallyworld.png
-              company_url: https://walmart.com/
+              company_url: https://walmart.com
               designation: Electronics Sales / Photo Lab Tech
               description: Worked most departments over 6 years.
               visibility: true
@@ -65,13 +65,13 @@ author_work_experiences:
 author_education_details:
               - college_logo: fullcoll.png
                 college_name: Fullerton College
-                college_url: https://www.fullcoll.edu/
+                college_url: https://www.fullcoll.edu
                 college_degree: Computer Science
                 description: Associate of Science 
                 visibility: true
               - college_logo: csuf.png
                 college_name: California State University Fullerton
-                college_url: https://www.fullerton.edu/
+                college_url: https://www.fullerton.edu
                 college_degree: Computer Science
                 description: 4th year in Bachelor of Science 
                 visibility: true
@@ -81,12 +81,12 @@ author_project_details:
               - project_thumbnail: snake.png
                 project_title: Snake + SFML
                 project_description: Snake Clone built in C++ using SFML.
-                project_url: https://github.com/TelloViz/Snake-SFML/
+                project_url: https://github.com/TelloViz/Snake-SFML
                 visibility: true
               - project_thumbnail: gyofish.PNG
                 project_title: ChompChomp (Gyo Fish!)
                 project_description: Summer Jam project with my brother. The goal was to implement the fishing mechanic from Stardew Valley.
-                project_url: https://github.com/TelloViz/ChompChomp/
+                project_url: https://github.com/TelloViz/ChompChomp
                 visibility: true
 
 # social links
