--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: TelloViz/TelloViz.github.io
+  repo: TelloViz/telloViz.github.io
   branch: main
-  site_domain: TelloViz/telloviz.github.io
+  site_domain: telloviz.netlify.app
 
 media_folder: "assets/img/posts" # Media files will be stored in the repo under images/uploads
 public_folder: "/assets/img/posts" # The src attribute for uploaded media will begin with /images/uploads
