--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 tello-:
    name: Joshua Lollis
    username: tello-
-   site: https://telloviz.github.io
+   site: https://telloviz.netlify.app
    avatar: joshlollis.png
    bio: "Student/Game Dev/Programmer/Artist/Musician based in Fullerton CA, USA"
    email: tellovisionstudio@gmail.com
