--- a/_config.yml
+++ b/_config.yml
@@ -103,8 +103,8 @@ flickr_username:
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
-# disqus_shortname: sujay-kundu
-hyvor_talk_website_id: 476
+disqus_shortname: tello-vision
+hyvor_talk_website_id: 9321
 
 # wakatime username (coding activity)
 wakatime_username: " " #sujaykundu777
