--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ flickr_username:
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 disqus_shortname: tello-vision
-hyvor_talk_website_id: 9321
+#hyvor_talk_website_id: 9321
 
 # wakatime username (coding activity)
 wakatime_username: " " #sujaykundu777
