update wakatime info in coding_activity.html

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ disqus_shortname: tello-vision
 #hyvor_talk_website_id: 9321
 
 # wakatime username (coding activity)
-wakatime_username: " " #sujaykundu777
+wakatime_username: "telloviz" #sujaykundu777
 
 # mailchimp embedded form url (newsletter):
 mailchimp_form_url: " " #https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
