--- a/admin/config.yml
+++ b/admin/config.yml
@@ -43,3 +43,13 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
       - {label: "Title", name: "title", widget: "string", required: false}
       - {label: "Body", name: "body", widget: "markdown", required: false}
+
+type: wakatime
+style: powerline
+powerline_symbol: 
+foreground: "#ffffff"
+background: "#007acc"
+properties:
+  url: https://wakatime.com/api/v1/users/current/summaries?start=today&end=today&api_key=API_KEY
+  cache_timeout: 10
+  http_timeout: 500
