update formspree email in config

--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ mailchimp_form_url: " " #https://sujaykundu.us10.list-manage.com/subscribe/post?
 
 # contact form - (choose formspress or getform)
 # getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
-formspree_email: johndoe@gmail.com
+formspree_email: tellovisionstudio@gmail.com
 
 # releases - widget can be (sidebar, modal or embed)
 olvy_organization: devlopr
