update config for mailchimp

--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ wakatime_username: "telloviz" #sujaykundu777
 mailchimp_form_url: " " #https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # contact form - (choose formspress or getform)
-# getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
+getform_endpoint: d4103f46-9fbd-4438-9eee-5337432dd46e
 formspree_email: tellovisionstudio@gmail.com
 
 # releases - widget can be (sidebar, modal or embed)
