update formspree email config

--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ mailchimp_form_url: " " #https://sujaykundu.us10.list-manage.com/subscribe/post?
 
 # contact form - (choose formspress or getform)
 #getform_endpoint: d4103f46-9fbd-4438-9eee-5337432dd46e
-formspree_email: f/meqbalrl
+formspree_email: tellovisionstudio@gmail.com
 
 # releases - widget can be (sidebar, modal or embed)
 olvy_organization: devlopr
