--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,7 +6,7 @@ tello-:
    site: https://telloviz.netlify.app
    avatar: joshlollis.png
    bio: "Student/Game Dev/Programmer/Artist/Musician based in Fullerton CA, USA"
-   email: tellovisionstudio@gmail.com
+   email: lollisjosh@csu.fullerton.edu
    social:
       - title: "github"
         url: "https://github.com/telloviz"
