--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ urls:
 
 author_logo: joshlollis.png
 author: Josh Lollis
-author_bio: Hi, my name is Josh Lollis!
+author_bio: Hi, my name is Josh! I love creating! I hope you find something that inspires you here. :D
 author_email: "tellovisionstudio@gmail.com"
 author_location: Fullerton CA, USA
 author_website_url: "https://telloviz.netlify.app"
