--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -1,9 +1,10 @@
+
 -
-  title: Mountains
-  directory: mountains
+  title: Office
+  directory: office
   preview:
-    filename: 1.jpg
-    original: 1-thumbnail.jpg
+    filename: office.png
+    original: office-thumbnail.png
     sizes:
-    - 1-thumbnail.jpg
-    thumbnail: 1-thumbnail.jpg
+    - office-thumbnail.png
+    thumbnail: office-thumbnail.png
